[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Fonts/Inter/static/Inter-ExtraBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/PauseMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.713726 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="Menu"]
anchor_left = 0.25
anchor_right = 0.75
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopHalf" type="Control" parent="Menu/Buttons"]
anchor_right = 1.0
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Menu/Buttons/TopHalf"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -85.0
margin_right = 85.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="Menu/Buttons/TopHalf"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.5
margin_top = -32.5
margin_right = 76.5
margin_bottom = 32.5
custom_fonts/font = SubResource( 2 )
text = "Restart"

[node name="Quit" type="Button" parent="Menu/Buttons/TopHalf"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -76.5
margin_top = -65.0
margin_right = 76.5
custom_fonts/font = SubResource( 2 )
text = "Quit"

[node name="BottomHalf" type="Control" parent="Menu/Buttons"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Menu/Buttons/TopHalf/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Menu/Buttons/TopHalf/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Menu/Buttons/TopHalf/Quit" to="." method="_on_Quit_pressed"]
